Sorted the response body of all APIs